<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="co.swrl.list.ui.activity.AddSwrlActivity">

    <EditText
        android:id="@+id/addSwrlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/addSwrlText"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/addItemEditText"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/addSwrlText"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:progressDrawable="@drawable/circular_progress_bar" />

    <TextView
        android:id="@+id/progressSearchingText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/progressBar"
        android:gravity="center_horizontal"
        android:paddingTop="5sp"
        android:text="@string/searching" />

    <TextView
        android:id="@+id/noSearchResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/addSwrlText"
        android:gravity="center"
        android:text="@string/no_search_results" />

    <LinearLayout
        android:id="@+id/footer"
        style="?attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:orientation="horizontal">

        <Button
            style="?attr/buttonBarButtonStyle"
            android:id="@+id/cancel_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            style="?attr/buttonBarButtonStyle"
            android:id="@+id/add_swrl_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quick_add_swrl" />

    </LinearLayout>

</RelativeLayout>
