...

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">

            <RelativeLayout
                android:layout_width="match_parent"
...
                        fab:fab_colorPressed="@color/tv"
                        fab:fab_icon="@drawable/ic_tv_icon"
                        fab:fab_size="mini"
                        fab:fab_title="TV Show" />

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_film"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fab:fab_colorNormal="@color/film"
                        fab:fab_colorPressed="@color/film"
                        fab:fab_icon="@drawable/ic_film"
                        fab:fab_size="mini"
...
